[workspace]
members = [ "core", "quic", "http", "asyncffi" ]
exclude = [ "quinn" ]
resolver = "3"


[package]
name = "photon"
version = "1.0.4"
edition = "2024"
authors = [ "samicpp" ]

description = "Lowlevel Async FFI HTTP Framework"
repository = "https://github.com/samicpp/httplib"

readme = "README.md"
categories = ["network", "protocol", "http", "ffi"]
keywords = [ 
    "http", "http/0.9", "http/1.0", "http/1.1", "http2", "websocket", 
    "ffi", "async", 
]


[lib]
name = "photon"
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
quic = { path = "./quic" }
http = { path = "./http" }
asyncffi = { path = "./asyncffi", optional = true }
httprs_core = { path = "./core", optional = true }


[features]
default = ["asyncffi"]
asyncffi = ["dep:httprs_core", "dep:asyncffi"]
unix-sockets = ["asyncffi/unix-sockets"]
ring = ["asyncffi/ring"]
aws-lc-rs = ["asyncffi/aws-lc-rs"]

[profile.release]
panic = "abort"
[profile.dev]
panic = "unwind"
