[package]
name = "httplib"
version = "3.1.3"
edition = "2024"

[lib]
name = "httplib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
quinn = { version = "=0.11.9", features = ["aws-lc-rs"] }
httprs_core = { path = "../core" }
http = { path = "../http" }
tokio = "=1.49.0"
rustls = { version = "=0.23.36", default-features = false, features = ["aws-lc-rs"] }
tokio-rustls = "=0.26.4"
webpki-roots = "=1.0.6"
rand = "=0.9.2"
dashmap = "=6.1.0"
# rustls-pki-types = "=1.14.0"
